# flatPDF

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  MacAbout.h  MacAbout.mm  Main.qml  PdfFlattener.cpp  PdfFlattener.h  README.md  README_it.md  flatPdf.icns  main.cpp
cmake/: FindWrapOpenGL.cmake
docs/: PIANO_OPERATIVO.md
scripts/: build_release_macos.sh  bundle_pdftoppm.sh  test_cli.sh
